Updated LobbyTest class